# kioskbear

./: README.md
kioskbear_web/: Dockerfile  package-lock.json  package.json  pyproject.toml  setup.py
kioskbear_web/kioskbear/accounts/: admin.py  forms.py  urls.py  views.py
kioskbear_web/kioskbear/accounts/migrations/: 0001_initial.py  0002_alter_customer_billing_account_and_more.py  0003_alter_account_customer.py
kioskbear_web/kioskbear/app/: urls.py  views.py
kioskbear_web/kioskbear/app/templatetags/: survey_tags.py
kioskbear_web/kioskbear/billing/: models.py
kioskbear_web/kioskbear/billing/migrations/: 0001_initial.py
kioskbear_web/kioskbear/conf/: urls.py
kioskbear_web/kioskbear/conf/settings/: base.py  local.py  production.py
kioskbear_web/kioskbear/feedback/migrations/: 0002_form_question_scoredfeedbackquestion_and_more.py  (+3 more)
kioskbear_web/kubernetes/: httproutes.yaml  kioskbear.yaml
kioskhero_web/: .gitignore  Dockerfile  cloudbuild.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
kioskhero_web/kioskbear/: db.sqlite3
kioskhero_web/kioskbear/accounts/: apps.py  managers.py  models.py
kioskhero_web/kioskbear/app/: apps.py
kioskhero_web/kioskbear/billing/: apps.py
kioskhero_web/kioskbear/conf/: asgi.py  urls.py  wsgi.py
kioskhero_web/kioskbear/feedback/: admin.py  apps.py  models.py
kioskhero_web/kioskbear/kiosk/: admin.py  apps.py  models.py  views.py
kioskhero_web/kioskbear/landingpages/: apps.py  urls.py  views.py
kioskhero_web/kubernetes/: httproutes.yaml  kioskbear.yaml
(+65 files in other folders)
