[project]
dependencies = [
    "django==6.0.4",
    "djangorestframework==3.17.1",
    "markdown==3.10.2",
    "django-filter==25.2",
    "whitenoise==6.12.0",
    "gunicorn==25.3.0",
    "psycopg-binary>=3.3.4",
    "psycopg-pool>=3.3.1",
    "psycopg>=3.3.4",
    "pydantic>=2.12.5",
    "sentry-sdk==2.58.0",
    "django-ninja>=1.6.2",
    "django-anymail>=15.0",
]
name = "kioskbear"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"

[tool.uv.build-backend]
module-name = "kioskbear"
module-root = ""

[build-system]
requires = ["uv_build>=0.9.23, <0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ty>=0.0.34",
]
